# fdb-go

./: .bazelignore  .bazelrc  .gitignore  .golangci.yml  .terraform.tfstate.lock.info  BUILD.bazel  CASCADES_DIVERGENCE.md  CHANGELOG.md  CLAUDE.md  DIVERGENCES.md  FDB_CONFLICT_DETECTION.md  FEATURE_MATRIX.md  LICENSE  MODULE.bazel  NOTICE  PHASE1_TEST_GAPS.md  PORT.md  PRODUCTION_READINESS.md  README.md  RELEASE.md  REVIEW.md  RFC_TRANSACTION_PAGINATION.md  SECURITY.md  SQL_ANSI_CONFORMANCE.md  SQL_CONFORMANCE.md  SQL_COVERAGE.md  STRESS_RELATIONAL.md  TODO-production.md  TODO.md  TODO_client.md  TODO_old.md  bazel-example-usage-based-billing  bazel-review  buf.gen.yaml  buf.yaml  cursor_sequence_example.md  example_usage.md  fdb_inspection.md  go.mod  go.sum  (+9 more)
cmd/bench-report/: BUILD.bazel  main.go  main_test.go
cmd/fdb-binding-stress/: BUILD.bazel  main.go
cmd/fdb-diff-oracle/: BUILD.bazel  build.sh  fuzz_test.go  oracle.go  readoptions_diff_test.go
cmd/fdb-diff-oracle/cpp/: main.cpp
cmd/fdb-schema-extract/: BUILD.bazel  build.sh  extract.h  gen_v5.cpp  main.cpp  name_capture.cpp  poc_generator.cpp
cmd/fdb-stacktester/: BUILD.bazel  README.md  directory_ops.go  machine.go  main.go  operations.go  run_binding_test.sh
cmd/fdb-stacktester/bindingtester/: BUILD.bazel  Dockerfile  binding_test.go  doc.go
cmd/fdb-wire-codegen/: BUILD.bazel  main.go
cmd/fdb-wire-schema-generator/: BUILD.bazel  docker_build.sh  fdb_stubs.h  generate.bzl  main.cpp  name_capture.cpp  name_capture.h  parser.go  schema_extractor.h
cmd/fdb-wirelog-dump/: BUILD.bazel  main.go
cmd/frl/: .gitignore  BUILD.bazel  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  main.go
cmd/frl/demo/: README.md  schema.sql  seed.sql
cmd/frl/docs/: operator-guide.md
cmd/gen-feature-matrix/: BUILD.bazel  main.go
cmd/gen-sql-coverage/: BUILD.bazel  main.go
cmd/spfresh-maintainer/: BUILD.bazel  main.go
cmd/test-report/: BUILD.bazel  main.go
conformance/: .golangci.yml  BUILD.bazel  README.md  aggregate_conformance.java  aggregate_conformance_test.go  benchmark_comparison_test.go  benchmark_steps.java  bitmap_value_index_conformance.java  bitmap_value_index_conformance_test.go  clear_when_zero_conformance.java  clear_when_zero_conformance_test.go  composite_index_conformance.java  composite_index_conformance_test.go  conflict_conformance_test.go  conformance_base.java  conformance_server.java  conformance_step.java  conformance_suite_test.go  conformance_test.go  container_test.go  continuation_conformance.java  continuation_conformance_test.go  continuation_test.go.skip  count_conformance.java  count_conformance_test.go  count_index_conformance.java  count_index_conformance_test.go  count_not_null_index_conformance.java  count_not_null_index_conformance_test.go  count_updates_index_conformance.java  count_updates_index_conformance_test.go  covering_index_conformance.java  covering_index_conformance_test.go  crud.java  crud_test.go  customer_conformance.java  customer_conformance_test.go  delete_all_conformance.java  delete_all_conformance_test.go  delete_conformance_test.go  (+82 more)
conformance/helpers/: BUILD.bazel  clear_when_zero_conformance_store.go  composite_index_conformance_store.go  conformance_store.go  container.go  count_index_conformance_store.go  count_not_null_index_conformance_store.go  count_updates_index_conformance_store.go  customer_conformance_store.go  fanout_index_conformance_store.go  index_conformance_store.go  index_state_conformance_store.go  javainvoker.go  min_max_ever_index_conformance_store.go  min_max_ever_tuple_index_conformance_store.go  rebuild_index_conformance_store.go  split_conformance_store.go  store_header_conformance_store.go  sum_index_conformance_store.go  testdata.go
conformance/java/: .gitignore  BUILD.bazel  build.gradle
conformance/proto/: record_layer_demo.proto
example/: BUILD.bazel  getting_started.go
example/sql/: BUILD.bazel  main.go
examples/metrognome/app/: BUILD.bazel  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vite_wrapper.mjs
pkg/docscheck/: BUILD.bazel  doc.go  docs_consistency_test.go  panic_boundary_test.go  plan_proto_schema_test.go  source_hygiene_test.go
pkg/fdbgo/bench/: BUILD.bazel  PERFORMANCE.md  bench_test.go  differential_approxsize_test.go  differential_atomic_test.go  differential_cancel_test.go  differential_commit_coalescing_test.go  differential_conflict_outcome_fuzz_test.go  differential_conflict_range_test.go  differential_errorcode_test.go  differential_fuzz_test.go  differential_getkey_boundary_test.go  differential_getkey_conflict_test.go  differential_getkey_ryw_test.go  differential_getrange_conflict_test.go  differential_getrange_iterator_conflict_test.go  differential_getrange_selector_test.go  differential_grvcache_test.go  (+17 more)
pkg/rabitq/: BUILD.bazel  rabitq.go  rabitq_test.go
pkg/recordlayer/: BUILD.bazel  SPFRESH_OPERATIONS.md  VECTOR_BENCHMARK_RESULTS.md  aggregate_function.go  aggregate_function_test.go  aggregate_function_unit_test.go  api_coverage2_test.go  api_coverage_test.go  atomic_index_helpers.go  atomic_mutation.go  atomic_mutation_index_maintainer.go  batch_insert_test.go  benchmark_test.go  benchmark_throughput_test.go  bitmap_value_index_maintainer.go  bitmap_value_index_test.go  bug_bounty2_test.go  bug_bounty3_cursor_test.go  bug_bounty3_index_test.go  bug_bounty3_indexer_test.go  bug_bounty3_metadata_test.go  bug_bounty3_store_test.go  bug_bounty3_test.go  bug_bounty_test.go  bunched_map.go  bunched_map_iterator.go  bunched_map_unit_test.go  byte_limit_bug_test.go  chained_cursor.go  chained_cursor_test.go  collate_function_key_expression.go  collate_function_key_expression_test.go  collision_test.go  commit_hooks_test.go  compare_field_test.go  conflict_test.go  conflict_test.go.skip  conformance_audit_test.go  constants.go  context_api_test.go  (+299 more)
proto/apple/: BUILD.bazel  record_cursor.proto
proto/relational/: BUILD.bazel  catalog_data.proto
reports/: BUILD.bazel  behavior_compat_audit.md  go_style_audit.md  subspace_wire_compat.md  wire_compat_audit.md
(+3933 files in other folders)
