load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "nogo")

exports_files(["buf.yaml"])

# Living docs exported as data for the RFC-131 doc-consistency guard
# (//pkg/docscheck:docscheck_test). MODULE.bazel is the version source of truth.
exports_files([
    "MODULE.bazel",
    "go.mod",
    "README.md",
    "PRODUCTION_READINESS.md",
    "TODO.md",
    "DIVERGENCES.md",
    "CHANGELOG.md",
    "RELEASE.md",
])

# gazelle:prefix github.com/birdayz/fdb-record-layer-go
# gazelle:proto disable
# Build tags gazelle treats as satisfied so it keeps the corresponding `srcs` on
# regen. These mirror the tags set repo-wide in `.bazelrc`
# (--@rules_go//go/config:tags=...): both gate bazel-only test suites that a plain
# `go test ./...` must skip — `bazelrunfiles` (conformance/bindingtester) and
# `stress` (heavy benchmarks under pkg/relational/sqldriver/stress). Caveat of
# enabling a tag globally: a `//go:build !stress` / `!bazelrunfiles` file would be
# silently dropped from every Bazel build — don't introduce one.
# gazelle:build_tags bazelrunfiles,stress
gazelle(name = "gazelle")

nogo(
    name = "nogo",
    config = "nogo_config.json",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_tools//go/analysis/passes/appends:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/asmdecl:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/assign:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/atomic:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/bools:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/buildtag:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/composite:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/copylock:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/deepequalerrors:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/defers:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/directive:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/errorsas:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/httpresponse:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/ifaceassert:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/loopclosure:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/lostcancel:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/nilfunc:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/nilness:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/printf:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/shadow:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/shift:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/sigchanyzer:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/sortslice:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/stdmethods:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/stringintconv:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/structtag:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/tests:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/timeformat:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/unmarshal:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/unreachable:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/unsafeptr:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/unusedresult:go_default_library",
        "@org_golang_x_tools//go/analysis/passes/waitgroup:go_default_library",
        # project-specific analyzers
        "//pkg/linters/gofumpt",
        "//pkg/linters/noemptyiface",
        "//pkg/linters/norecover",
        # staticcheck SA analyzers
        "@co_honnef_go_tools//staticcheck/sa1000",
        "@co_honnef_go_tools//staticcheck/sa1001",
        "@co_honnef_go_tools//staticcheck/sa1002",
        "@co_honnef_go_tools//staticcheck/sa1003",
        "@co_honnef_go_tools//staticcheck/sa1004",
        "@co_honnef_go_tools//staticcheck/sa1005",
        "@co_honnef_go_tools//staticcheck/sa1006",
        "@co_honnef_go_tools//staticcheck/sa1007",
        "@co_honnef_go_tools//staticcheck/sa1008",
        "@co_honnef_go_tools//staticcheck/sa1010",
        "@co_honnef_go_tools//staticcheck/sa1011",
        "@co_honnef_go_tools//staticcheck/sa1012",
        "@co_honnef_go_tools//staticcheck/sa1013",
        "@co_honnef_go_tools//staticcheck/sa1014",
        "@co_honnef_go_tools//staticcheck/sa1015",
        "@co_honnef_go_tools//staticcheck/sa1016",
        "@co_honnef_go_tools//staticcheck/sa1017",
        "@co_honnef_go_tools//staticcheck/sa1018",
        "@co_honnef_go_tools//staticcheck/sa1019",
        "@co_honnef_go_tools//staticcheck/sa1020",
        "@co_honnef_go_tools//staticcheck/sa1021",
        "@co_honnef_go_tools//staticcheck/sa1023",
        "@co_honnef_go_tools//staticcheck/sa1024",
        "@co_honnef_go_tools//staticcheck/sa1025",
        "@co_honnef_go_tools//staticcheck/sa1026",
        "@co_honnef_go_tools//staticcheck/sa1027",
        "@co_honnef_go_tools//staticcheck/sa1028",
        "@co_honnef_go_tools//staticcheck/sa1029",
        "@co_honnef_go_tools//staticcheck/sa1030",
        "@co_honnef_go_tools//staticcheck/sa1031",
        "@co_honnef_go_tools//staticcheck/sa1032",
        "@co_honnef_go_tools//staticcheck/sa2000",
        "@co_honnef_go_tools//staticcheck/sa2001",
        "@co_honnef_go_tools//staticcheck/sa2002",
        "@co_honnef_go_tools//staticcheck/sa2003",
        "@co_honnef_go_tools//staticcheck/sa3000",
        "@co_honnef_go_tools//staticcheck/sa3001",
        "@co_honnef_go_tools//staticcheck/sa4000",
        "@co_honnef_go_tools//staticcheck/sa4001",
        "@co_honnef_go_tools//staticcheck/sa4003",
        "@co_honnef_go_tools//staticcheck/sa4004",
        "@co_honnef_go_tools//staticcheck/sa4005",
        "@co_honnef_go_tools//staticcheck/sa4006",
        "@co_honnef_go_tools//staticcheck/sa4008",
        "@co_honnef_go_tools//staticcheck/sa4009",
        "@co_honnef_go_tools//staticcheck/sa4010",
        "@co_honnef_go_tools//staticcheck/sa4011",
        "@co_honnef_go_tools//staticcheck/sa4012",
        "@co_honnef_go_tools//staticcheck/sa4013",
        "@co_honnef_go_tools//staticcheck/sa4014",
        "@co_honnef_go_tools//staticcheck/sa4015",
        "@co_honnef_go_tools//staticcheck/sa4016",
        "@co_honnef_go_tools//staticcheck/sa4017",
        "@co_honnef_go_tools//staticcheck/sa4018",
        "@co_honnef_go_tools//staticcheck/sa4019",
        "@co_honnef_go_tools//staticcheck/sa4020",
        "@co_honnef_go_tools//staticcheck/sa4021",
        "@co_honnef_go_tools//staticcheck/sa4022",
        "@co_honnef_go_tools//staticcheck/sa4023",
        "@co_honnef_go_tools//staticcheck/sa4024",
        "@co_honnef_go_tools//staticcheck/sa4025",
        "@co_honnef_go_tools//staticcheck/sa4026",
        "@co_honnef_go_tools//staticcheck/sa4027",
        "@co_honnef_go_tools//staticcheck/sa4028",
        "@co_honnef_go_tools//staticcheck/sa4029",
        "@co_honnef_go_tools//staticcheck/sa4030",
        "@co_honnef_go_tools//staticcheck/sa4031",
        "@co_honnef_go_tools//staticcheck/sa4032",
        "@co_honnef_go_tools//staticcheck/sa5000",
        "@co_honnef_go_tools//staticcheck/sa5001",
        "@co_honnef_go_tools//staticcheck/sa5002",
        "@co_honnef_go_tools//staticcheck/sa5003",
        "@co_honnef_go_tools//staticcheck/sa5004",
        "@co_honnef_go_tools//staticcheck/sa5005",
        "@co_honnef_go_tools//staticcheck/sa5007",
        "@co_honnef_go_tools//staticcheck/sa5008",
        "@co_honnef_go_tools//staticcheck/sa5009",
        "@co_honnef_go_tools//staticcheck/sa5010",
        "@co_honnef_go_tools//staticcheck/sa5011",
        "@co_honnef_go_tools//staticcheck/sa5012",
        "@co_honnef_go_tools//staticcheck/sa6000",
        "@co_honnef_go_tools//staticcheck/sa6001",
        "@co_honnef_go_tools//staticcheck/sa6002",
        "@co_honnef_go_tools//staticcheck/sa6003",
        "@co_honnef_go_tools//staticcheck/sa6005",
        "@co_honnef_go_tools//staticcheck/sa6006",
        "@co_honnef_go_tools//staticcheck/sa9001",
        "@co_honnef_go_tools//staticcheck/sa9002",
        "@co_honnef_go_tools//staticcheck/sa9003",
        "@co_honnef_go_tools//staticcheck/sa9004",
        "@co_honnef_go_tools//staticcheck/sa9005",
        "@co_honnef_go_tools//staticcheck/sa9006",
        "@co_honnef_go_tools//staticcheck/sa9007",
        "@co_honnef_go_tools//staticcheck/sa9008",
        "@co_honnef_go_tools//staticcheck/sa9009",
    ],
)
