module(
    name = "fdb-record-layer-go",
    version = "0.0.0",
)

# Go
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.module_override(
    patch_strip = 1,
    patches = ["//patches:fdb-go-range-iterator-done.patch"],
    path = "github.com/apple/foundationdb/bindings/go",
)
use_repo(
    go_deps,
    "co_honnef_go_tools",
    "com_github_apple_foundationdb_bindings_go",
    "com_github_google_uuid",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
    "com_github_planetscale_vtprotobuf",
    "com_github_rivo_uniseg",
    "com_github_testcontainers_testcontainers_go",
    "com_github_testcontainers_testcontainers_go_modules_socat",
    "org_golang_google_protobuf",
    "org_golang_x_text",
    "org_golang_x_tools",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")
go_sdk.nogo(nogo = "//:nogo")

# Proto (codegen stays with buf generate)
bazel_dep(name = "protobuf", version = "34.0.bcr.1")

# Java (conformance server)
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "rules_android", version = "0.7.1")  # Override transitive dep for Bazel 9 compat

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.foundationdb:fdb-record-layer-core:4.10.6.0",
        "com.google.code.gson:gson:2.10.1",
        "com.google.protobuf:protobuf-java-util:4.29.3",
    ],
    known_contributing_modules = [
        "bazel_worker_java",
        "protobuf",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

# SIFT-1M benchmark dataset (industry-standard ANN benchmark, ~160MB compressed).
# Downloaded on demand via FTP from INRIA TEXMEX. Cached by Bazel repository cache.
# Only fetched when sift_benchmark_test target is built (manual tag).
sift_dataset = use_repo_rule("//:sift_repo.bzl", "sift_dataset")

sift_dataset(name = "sift1m")
