module(
    name = "fdb-record-layer-go",
    version = "0.0.0",
)

# Go
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Shell (sh_binary for codegen wrappers, e.g. the ANTLR parser generator).
bazel_dep(name = "rules_shell", version = "0.6.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.module_override(
    patch_strip = 1,
    patches = ["//patches:fdb-go-range-iterator-done.patch"],
    path = "github.com/apple/foundationdb/bindings/go",
)
use_repo(
    go_deps,
    "build_buf_go_protoyaml",
    "cc_mvdan_gofumpt",
    "co_honnef_go_tools",
    "com_github_antlr4_go_antlr_v4",
    "com_github_apple_foundationdb_bindings_go",
    "com_github_birdayz_protobuf_ecosystem",
    "com_github_chzyer_readline",
    "com_github_docker_docker",
    "com_github_docker_go_connections",
    "com_github_google_uuid",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
    "com_github_planetscale_vtprotobuf",
    "com_github_rivo_uniseg",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
    "com_github_testcontainers_testcontainers_go",
    "com_github_zeebo_xxh3",
    "in_gopkg_yaml_v3",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "land_charm_fang_v2",
    "land_charm_lipgloss_v2",
    "org_golang_google_protobuf",
    "org_golang_x_text",
    "org_golang_x_tools",
    "org_uber_go_mock",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")
go_sdk.nogo(nogo = "//:nogo")

# C++ (wire format generation + FDB build)
bazel_dep(name = "rules_cc", version = "0.1.1")

# FDB C++ source — fetched automatically from GitHub, pinned to tag.
# Bazel downloads, caches, and injects MODULE.bazel + BUILD.bazel via patch_cmds.
# FDB version — MUST match .bazelrc FDB_VERSION.
bazel_dep(name = "foundationdb", version = "7.3.77")
archive_override(
    module_name = "foundationdb",
    patch_cmds = [
        """cat > MODULE.bazel <<'MODEOF'
module(name = "foundationdb", version = "7.3.77")
bazel_dep(name = "rules_cc", version = "0.1.1")
MODEOF""",
        """cat > BUILD.bazel <<'BUILDEOF'
load("@rules_cc//cc:cc_library.bzl", "cc_library")
package(default_visibility = ["//visibility:public"])

# All source files (for cmake genrule build).
filegroup(name = "all_srcs", srcs = glob(["**"]))

# Header-only subset (for lightweight test vector generator + stub extractor).
cc_library(
    name = "flow_headers",
    hdrs = glob([
        "flow/include/flow/flat_buffers.h",
        "flow/include/flow/FileIdentifier.h",
        "flow/include/flow/ObjectSerializerTraits.h",
    ]),
    includes = ["flow/include"],
)
exports_files(["flow/flat_buffers.cpp"])

# Binding tester Python files (for conformance testing).
filegroup(
    name = "bindingtester",
    srcs = glob(["bindings/bindingtester/**/*.py"]),
)

# Python FDB binding (needed by bindingtester).
filegroup(
    name = "python_fdb",
    srcs = glob(["bindings/python/**/*.py", "bindings/python/**/*.cmake"]),
)
BUILDEOF""",
    ],
    strip_prefix = "foundationdb-7.3.77",
    urls = ["https://github.com/apple/foundationdb/archive/refs/tags/7.3.77.tar.gz"],
)

# Proto (codegen stays with buf generate)
bazel_dep(name = "protobuf", version = "34.0.bcr.1")

# Java (conformance server)
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "rules_android", version = "0.7.1")  # Override transitive dep for Bazel 9 compat

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.foundationdb:fdb-record-layer-core:4.12.11.0",
        # fdb-relational-* artifacts power the Java side of the
        # plan-equivalence harness (RFC-022 §4.-1 Phase 2). Lowest
        # published version on Maven Central is 4.10.18.0; we run
        # 4.12.11.0 to match fdb-record-layer-core.
        "org.foundationdb:fdb-relational-api:4.12.11.0",
        "org.foundationdb:fdb-relational-core:4.12.11.0",
        "com.google.code.gson:gson:2.10.1",
        "com.google.protobuf:protobuf-java-util:4.29.3",
    ],
    known_contributing_modules = [
        "bazel_worker_java",
        "protobuf",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

# SIFT-1M benchmark dataset (industry-standard ANN benchmark, ~160MB compressed).
# Downloaded on demand via FTP from INRIA TEXMEX. Cached by Bazel repository cache.
# Only fetched when sift_benchmark_test target is built (manual tag).
sift_dataset = use_repo_rule("//:sift_repo.bzl", "sift_dataset")

sift_dataset(name = "sift1m")

# ANTLR4 complete jar (standalone executable with the Tool main class).
# Used by //pkg/relational/core/parser/grammar:generate_parser to regenerate
# the Go parser from the .g4 grammar files. Pin must match the antlr4-go
# runtime declared in go.mod (github.com/antlr4-go/antlr/v4).
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "antlr4_tool_jar",
    downloaded_file_path = "antlr-4.13.1-complete.jar",
    sha256 = "bc13a9c57a8dd7d5196888211e5ede657cb64a3ce968608697e4f668251a8487",
    urls = ["https://www.antlr.org/download/antlr-4.13.1-complete.jar"],
)
