load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "conformance_test",
    srcs = [
        "composite_index_conformance_test.go",
        "conflict_conformance_test.go",
        "conformance_suite_test.go",
        "continuation_conformance_test.go",
        "count_conformance_test.go",
        "count_index_conformance_test.go",
        "crud_test.go",
        "customer_conformance_test.go",
        "delete_all_conformance_test.go",
        "delete_conformance_test.go",
        "existence_check_conformance_test.go",
        "fanout_index_conformance_test.go",
        "index_conformance_test.go",
        "index_state_conformance_test.go",
        "isolation_conformance_test.go",
        "rangeset_conformance_test.go",
        "rebuild_index_conformance_test.go",
        "reverse_scan_conformance_test.go",
        "scan_conformance_test.go",
        "split_conformance_test.go",
        "store_header_conformance_test.go",
        "store_lifecycle_conformance_test.go",
        "sum_index_conformance_test.go",
        "version_conformance_test.go",
    ],
    data = ["//conformance/java:conformance_server"],
    deps = [
        "//conformance/helpers",
        "//gen",
        "//pkg/recordlayer",
        "//pkg/testcontainers/foundationdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/subspace",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/tuple",
        "@com_github_google_uuid//:uuid",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@org_golang_google_protobuf//proto",
    ],
)
