load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@rules_go//go:def.bzl", "go_test")
load("@rules_java//java:defs.bzl", "java_binary", "java_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

proto_library(
    name = "demo_proto",
    srcs = ["record_layer_demo.proto"],
    strip_import_prefix = "/conformance",
    deps = ["//proto/apple:apple_proto"],
)

java_proto_library(
    name = "demo_java_proto",
    deps = [":demo_proto"],
)

java_library(
    name = "conformance_lib",
    srcs = glob(["*.java"]),
    javacopts = ["-parameters"],
    deps = [
        ":demo_java_proto",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_protobuf_protobuf_java_util",
        "@maven//:org_foundationdb_fdb_extensions",
        "@maven//:org_foundationdb_fdb_java",
        "@maven//:org_foundationdb_fdb_record_layer_core",
    ],
)

java_binary(
    name = "conformance_server",
    main_class = "com.birdayz.conformance.ConformanceServer",
    visibility = ["//visibility:public"],
    runtime_deps = [":conformance_lib"],
)

go_test(
    name = "conformance_test",
    srcs = glob(["*_test.go"]),
    data = [":conformance_server"],
    deps = [
        "//gen",
        "//pkg/recordlayer",
        "//pkg/testcontainers/foundationdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/subspace",
        "@com_github_apple_foundationdb_bindings_go//src/fdb/tuple",
        "@com_github_google_uuid//:uuid",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@rules_go//go/runfiles",
    ],
)
