load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_test")
load("@rules_java//java:defs.bzl", "java_binary", "java_library")

proto_library(
    name = "demo_proto",
    srcs = ["record_layer_demo.proto"],
    strip_import_prefix = "/conformance",
    deps = ["//proto/apple:apple_proto"],
)

java_proto_library(
    name = "demo_java_proto",
    deps = [":demo_proto"],
)

java_library(
    name = "conformance_lib",
    srcs = glob(["*.java"]),
    javacopts = ["-parameters"],
    deps = [
        ":demo_java_proto",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_protobuf_protobuf_java",
        "@maven//:com_google_protobuf_protobuf_java_util",
        "@maven//:org_foundationdb_fdb_extensions",
        "@maven//:org_foundationdb_fdb_java",
        "@maven//:org_foundationdb_fdb_record_layer_core",
        # fdb-relational deps power the Java side of the
        # plan-equivalence harness (RFC-022 §4.-1 Phase 2) and the
        # Java↔Go SQL conformance harness Phase B. SqlPlanSteps wires
        # in the EXPLAIN path; metrics-core comes along because
        # RecordLayerEngine.makeEngine() takes a MetricRegistry.
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:org_foundationdb_fdb_relational_api",
        "@maven//:org_foundationdb_fdb_relational_core",
    ],
)

java_binary(
    name = "conformance_server",
    # The conformance server handles 200+ requests in one suite run.
    # Default JVM heap (~256MB) hits GC pressure after ~80-100 requests
    # and per-request latency grows past the 30s HTTP timeout. -Xmx2g
    # gives enough headroom for the full corpus without running into
    # GC stalls.
    jvm_flags = ["-Xmx2g"],
    main_class = "com.birdayz.conformance.ConformanceServer",
    visibility = ["//visibility:public"],
    runtime_deps = [":conformance_lib"],
)

go_test(
    name = "conformance_test",
    size = "large",
    srcs = [
        "aggregate_conformance_test.go",
        "benchmark_comparison_test.go",
        "bitmap_value_index_conformance_test.go",
        "clear_when_zero_conformance_test.go",
        "composite_index_conformance_test.go",
        "conflict_conformance_test.go",
        "conformance_suite_test.go",
        "container_test.go",
        "continuation_conformance_test.go",
        "count_conformance_test.go",
        "count_index_conformance_test.go",
        "count_not_null_index_conformance_test.go",
        "count_updates_index_conformance_test.go",
        "covering_index_conformance_test.go",
        "crud_test.go",
        "customer_conformance_test.go",
        "delete_all_conformance_test.go",
        "delete_conformance_test.go",
        "delete_records_where_conformance_test.go",
        "error_conformance_test.go",
        "existence_check_conformance_test.go",
        "fanout_index_conformance_test.go",
        "index_build_state_conformance_test.go",
        "index_conformance_test.go",
        "index_continuation_conformance_test.go",
        "index_state_conformance_test.go",
        "isolation_conformance_test.go",
        "java_invoker_test.go",
        "java_planner_warmth_proof_test.go",
        "max_ever_version_index_conformance_test.go",
        "metadata_proto_conformance_test.go",
        "metadata_store_conformance_test.go",
        "min_max_ever_index_conformance_test.go",
        "min_max_ever_tuple_index_conformance_test.go",
        "multidimensional_index_conformance_test.go",
        "nesting_index_conformance_test.go",
        "online_indexer_conformance_test.go",
        "permuted_min_max_index_conformance_test.go",
        "plan_diff_conformance_test.go",
        "rangeset_conformance_test.go",
        "rank_index_conformance_test.go",
        "rebuild_index_conformance_test.go",
        "reverse_scan_conformance_test.go",
        "run_sql_conformance_test.go",
        "scan_conformance_test.go",
        "schema_template_catalog_conformance_test.go",
        "split_conformance_test.go",
        "store_header_conformance_test.go",
        "store_header_v2_conformance_test.go",
        "store_helpers_test.go",
        "store_lifecycle_conformance_test.go",
        "sum_index_conformance_test.go",
        "testdata_test.go",
        "text_index_conformance_test.go",
        "time_window_leaderboard_conformance_test.go",
        "tuple_ordering_conformance_test.go",
        "typed_record_conformance_test.go",
        "unique_violation_conformance_test.go",
        "vector_index_conformance_test.go",
        "version_conformance_test.go",
        "version_index_conformance_test.go",
        "yamsql_cross_engine_conformance_test.go",
    ],
    data = [":conformance_server"],
    tags = ["conformance_java"],
    deps = [
        "//gen",
        "//pkg/fdbgo/fdb",
        "//pkg/fdbgo/fdb/subspace",
        "//pkg/fdbgo/fdb/tuple",
        "//pkg/recordlayer",
        "//pkg/relational/api",
        "//pkg/relational/conformance/plandiff",
        "//pkg/relational/conformance/yamsql",
        "//pkg/relational/core/catalog",
        "//pkg/testcontainers/foundationdb",
        "@com_github_google_uuid//:uuid",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_ginkgo_v2//types",
        "@com_github_onsi_gomega//:gomega",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@rules_go//go/runfiles",
    ],
)
