load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "example_lib",
    srcs = ["getting_started.go"],
    importpath = "fdb.dev/example",
    visibility = ["//visibility:private"],
    deps = [
        "//gen",
        "//pkg/fdbgo/fdb",
        "//pkg/fdbgo/fdb/subspace",
        "//pkg/fdbgo/fdb/tuple",
        "//pkg/recordlayer",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "example",
    embed = [":example_lib"],
    visibility = ["//visibility:public"],
)
