load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bench-report_lib",
    srcs = ["main.go"],
    importpath = "github.com/birdayz/fdb-record-layer-go/cmd/bench-report",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "bench-report",
    embed = [":bench-report_lib"],
    visibility = ["//visibility:public"],
)
