load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bench-report_lib",
    srcs = ["main.go"],
    importpath = "fdb.dev/cmd/bench-report",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "bench-report",
    embed = [":bench-report_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bench-report_test",
    srcs = ["main_test.go"],
    embed = [":bench-report_lib"],
    deps = ["@com_github_onsi_gomega//:gomega"],
)
