load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fdb-binding-stress_lib",
    srcs = ["main.go"],
    importpath = "fdb.dev/cmd/fdb-binding-stress",
    visibility = ["//visibility:private"],
    deps = ["//pkg/testcontainers/foundationdb"],
)

go_binary(
    name = "fdb-binding-stress",
    embed = [":fdb-binding-stress_lib"],
    visibility = ["//visibility:public"],
)
