# Differential serialization fuzzer: Go MarshalFDB vs C++ ObjectWriter.
#
# Stage 1: reuses //cmd/fdb-schema-extract:fdb_cmake_build (cached FDB build).
# Stage 2: compiles the diff-oracle C++ binary inside Docker.
# Stage 3: Go fuzz test starts the oracle as a subprocess.
#
# Build oracle: bazelisk build //cmd/fdb-diff-oracle:diff_oracle_bin
# Run tests:    bazelisk test //cmd/fdb-diff-oracle:fdb-diff-oracle_test --test_output=streamed
# Fuzz (manual): DIFF_ORACLE_BIN=$(bazelisk info bazel-bin)/cmd/fdb-diff-oracle/diff-oracle go test -fuzz=FuzzGetValueRequest -fuzztime=5m ./cmd/fdb-diff-oracle/...

load("@rules_go//go:def.bzl", "go_library", "go_test")

# Stage 2: Compile diff-oracle binary inside Docker, reusing the FDB cmake build.
genrule(
    name = "diff_oracle_bin",
    srcs = [
        "//cmd/fdb-schema-extract:fdb_cmake_build",
        "cpp/main.cpp",
    ],
    outs = ["diff-oracle"],
    cmd = """
        set -e
        BUILD_TAR=$$(realpath $(location //cmd/fdb-schema-extract:fdb_cmake_build))
        MAIN_CPP=$$(realpath $(location cpp/main.cpp))
        TMPOUT=$$(mktemp -d)
        chmod 777 "$$TMPOUT"
        # NOTE: Using :latest for build reproducibility is acceptable here because
        # Bazel caches the genrule output (the compiled binary), not the Docker image.
        # The binary only changes when main.cpp or FDB source changes.
        IMAGE="foundationdb/build:rockylinux9-latest"

        docker run --rm \
            -v "$$BUILD_TAR:/in/build.tar:ro" \
            -v "$$MAIN_CPP:/in/main.cpp:ro" \
            -v "$$TMPOUT:/out" \
            "$$IMAGE" \
            bash -c '
                set -e
                source /opt/rh/gcc-toolset-13/enable
                cd /tmp && tar xf /in/build.tar

                cp /in/main.cpp /tmp/fdb/diff_oracle_main.cpp
                touch /tmp/fdb/diff_oracle_main.cpp

                cat > /tmp/fdb/diff_oracle.cmake << "CMAKEOF"
add_executable(diff_oracle diff_oracle_main.cpp)
target_link_libraries(diff_oracle PRIVATE fdbclient fdbrpc flow)
target_include_directories(diff_oracle PRIVATE
    $${CMAKE_SOURCE_DIR} $${CMAKE_BINARY_DIR}
    $${CMAKE_BINARY_DIR}/fdbclient/include $${CMAKE_BINARY_DIR}/fdbclient
    $${CMAKE_BINARY_DIR}/fdbrpc/include $${CMAKE_BINARY_DIR}/fdbrpc
    $${CMAKE_BINARY_DIR}/flow/include $${CMAKE_BINARY_DIR}/flow)
CMAKEOF
                grep -q diff_oracle.cmake /tmp/fdb/CMakeLists.txt || \
                    echo "include(diff_oracle.cmake)" >> /tmp/fdb/CMakeLists.txt

                ninja -C /tmp/build -j$$(nproc) diff_oracle 2>&1 | tail -5
                cp /tmp/build/bin/diff_oracle /out/diff-oracle
                chmod 755 /out/diff-oracle
            '

        mv "$$TMPOUT/diff-oracle" $@
        rm -rf "$$TMPOUT"
    """,
    local = True,
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "fdb-diff-oracle_lib",
    srcs = ["oracle.go"],
    importpath = "github.com/birdayz/fdb-record-layer-go/cmd/fdb-diff-oracle",
    visibility = ["//visibility:private"],
)

go_test(
    name = "fdb-diff-oracle_test",
    srcs = [
        "fuzz_test.go",
        "readoptions_diff_test.go",
    ],
    data = [":diff_oracle_bin"],
    embed = [":fdb-diff-oracle_lib"],
    env = {
        "DIFF_ORACLE_BIN": "$(rootpath :diff_oracle_bin)",
    },
    tags = ["manual"],
    deps = [
        "//pkg/fdbgo/wire/types",
    ],
)

exports_files([
    "cpp/main.cpp",
])
